<fix> (like button) add width and text align add width and text align center otherwise the borders are cut

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -528,6 +528,8 @@
   position: relative;
 }
 .like_empty, .like_full {
+  width: 24px;
+  text-align: center;
   font-size: 1.4rem;
   position: absolute;
   transition: opacity 250ms cubic-bezier(0.14, -0.09, 0.87, 0.4);
